--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    position: relative;
 }
 
 .background-image {
@@ -32,6 +33,14 @@ body {
 h1 {
     font-size: 36px;
     margin-bottom: 20px;
+}
+
+.signature {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 16px;
+    color: #777;
 }
 
 input[type="text"] {
