--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ h1 {
 }
 
 .signature {
-    position: absolute;
-    top: 60px; /* Sposta la firma sotto il titolo con un margine */
+    position: relative;
+    top: 0px; /* Sposta la firma sotto il titolo con un margine */
     right: 10px;
     font-size: 16px;
     color: #777;
