--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
 }
 
 h1 {
+    position: absolute;
+    top: 0px;
     font-size: 36px;
     margin-bottom: 20px;
 }
@@ -40,7 +42,7 @@ h1 {
     top: 0px; /* Sposta la firma sotto il titolo con un margine */
     right: 10px;
     font-size: 16px;
-    color: #777;
+    color: #000000;
 }
 
 input[type="text"] {
@@ -55,4 +57,8 @@ button {
     color: #fff;
     border: none;
     cursor: pointer;
+}
+
+.second-screen {
+    display: none; /* Nasconde la seconda schermata inizialmente */
 }
